--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 markdown: redcarpet
 redcarpet:
   extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
-version: 0.2.0-dev
+version: 0.2.0
