--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,9 @@
 _site/
 .project
-/.sculpin/
+/.sculpin
 /app/cache/*
-/app/config/sculpin_kernel_*.yml
-/app/config/sculpin_site_*.yml
+/app/config/*.yml
 /app/logs/*
 output_*/
 source/components/
-s3.conf
 vendor/
-app/config/deploy.yml
-.DS*
