--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
         "graviton/deploy-scripts": "^0.2.2",
         "components/bootstrap": "~2.3.1",
         "components/jquery": "~1.9.1",
-        "components/highlightjs": "~7.3.0"
+        "components/highlightjs": "~7.3.0",
+        "fab/sculpin-pages-bundle": "dev-master"
     },
     "config": {
         "component-dir": "source/components"
