--- a/app/config/sculpin_site.yml
+++ b/app/config/sculpin_site.yml
@@ -1,8 +1,7 @@
 # The contents of this file are parsed and made available as
 # via `site.*`. So for example, {{ site.title }} can be used
 # in a template to get the contents of the `title` key.
-title: eVoja GRV Releasenotes
-subtitle: Releasenotes on the newest development in your eVoja packages. Available up to to the minute only on evoja-grv-releasenotes.
+title: Gravity-Platform Documentation
 
 # Insert your disqus shortname
 #disqus:
