Enforce HTTPS on cloud

--- a/app/config/deploy.yml.dist
+++ b/app/config/deploy.yml.dist
@@ -9,4 +9,5 @@ deploy-scripts:
   cf_space: dev
   cf_domain: 'nova.scapp.io'
   cf_services: ~
-  cf_environment_vars: ~
+  cf_environment_vars:
+    FORCE_HTTPS: true
