Sort nav by field

--- a/app/config/sculpin_kernel.yml
+++ b/app/config/sculpin_kernel.yml
@@ -2,3 +2,8 @@ sculpin_content_types:
     releases:
         type: path
         permalink: releasenote/:title/
+services:
+    twig.extension.sortbyfield:
+        class: Snilius\Twig\SortByFieldExtension
+        tags:
+            - { name: twig.extension }
